<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="applicationLabel">Phone</string>
    <string name="launcherActivityLabel">Phone</string>
    <string name="launcherDialpadActivityLabel">Phone Dialpad</string>
    <string name="dialerIconLabel">Phone</string>
    <string name="callHistoryIconLabel">Call history</string>
    <string name="action_report_number">Report inaccurate number</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="copy_transcript_text">Copy transcription</string>
    <string name="action_block_number">Block number</string>
    <string name="snackbar_number_blocked">
        <xliff:g id="number" example="(555) 555-5555">%1$s</xliff:g> blocked</string>
    <string name="action_unblock_number">Unblock number</string>
    <string name="snackbar_number_unblocked">
        <xliff:g id="number" example="(555) 555-5555">%1$s</xliff:g>
        unblocked</string>
    <string name="block_number_undo">UNDO</string>
    <string name="call_details_delete">Delete</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="call_log_delete_all">Clear call history</string>
    <string name="call_log_trash_voicemail">Delete voicemail</string>
    <string name="call_log_archive_voicemail">Archive voicemail</string>
    <string name="call_log_share_voicemail">Share voicemail</string>
    <string name="snackbar_voicemail_deleted">Voicemail deleted</string>
    <string name="snackbar_voicemail_archived">Voicemail archived</string>
    <string name="snackbar_voicemail_deleted_undo">UNDO</string>
    <string name="snackbar_voicemail_archived_goto">GOTO ARCHIVE</string>
    <string name="clearCallLogConfirmation_title">Clear call history?</string>
    <string name="clearCallLogConfirmation">This will delete all calls from your history</string>
    <string name="clearCallLogProgress_title">Clearing call history\u2026</string>
    <string name="userCallActivityLabel" product="default">Phone</string>
    <string name="notification_missedCallTitle">Missed call</string>
    <string name="notification_missedWorkCallTitle">Missed work call</string>
    <string name="notification_missedCallsTitle">Missed calls</string>
    <string name="notification_missedCallsMsg"><xliff:g id="num_missed_calls">%s</xliff:g> missed calls</string>
    <string name="notification_missedCall_call_back">Call back</string>
    <string name="notification_missedCall_message">Message</string>
    <string name="handle_restricted">RESTRICTED</string>
    <plurals name="notification_voicemail_title">
        <item quantity="one">Voicemail</item>
        <item quantity="other">
            <xliff:g id="count">%1$d</xliff:g>
            Voicemails
        </item>
    </plurals>
    <string name="notification_action_voicemail_play">Play</string>
    <string name="notification_voicemail_callers_list"><xliff:g id="newer_callers">%1$s</xliff:g>,
        <xliff:g id="older_caller">%2$s</xliff:g>
    </string>
    <string name="notification_new_voicemail_ticker">New voicemail from
        <xliff:g id="caller">%1$s</xliff:g>
    </string>
    <string name="voicemail_playback_error">Couldn\'t play voicemail</string>
    <string name="voicemail_fetching_content">Loading voicemail\u2026</string>
    <string name="voicemail_archiving_content">Archiving voicemail\u2026</string>
    <string name="voicemail_fetching_timout">Couldn\'t load voicemail</string>
    <string name="call_log_voicemail_header">Calls with voicemail only</string>
    <string name="call_log_incoming_header">Incoming calls only</string>
    <string name="call_log_outgoing_header">Outgoing calls only</string>
    <string name="call_log_missed_header">Missed calls only</string>
    <string name="visual_voicemail_title">Visual voicemail</string>
    <string name="visual_voicemail_text">
        See and listen to your voicemail, without having to call a number. Data charges may apply.
    </string>
    <string name="visual_voicemail_settings">Settings</string>
    <string name="voicemail_status_voicemail_not_available">Voicemail updates not available</string>
    <string name="voicemail_status_messages_waiting">New voicemail waiting. Can\'t load right now.</string>
    <string name="voicemail_status_configure_voicemail">Set up your voicemail</string>
    <string name="voicemail_status_audio_not_available">Audio not available</string>
    <string name="voicemail_status_action_configure">Set up</string>
    <string name="voicemail_status_action_call_server">Call voicemail</string>
    <string name="call_log_item_count_and_date">(<xliff:g id="count">%1$d</xliff:g>)
        <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="sms_disambig_title">Choose number</string>
    <string name="call_disambig_title">Choose number</string>
    <string name="make_primary">Remember this choice</string>
    <string name="description_search_button">search</string>
    <string name="description_dial_button">dial</string>
    <string name="description_digits_edittext">number to dial</string>
    <string name="description_playback_start_stop">Play or stop playback</string>
    <string name="description_playback_speakerphone">Switch on or off speakerphone</string>
    <string name="description_playback_seek">Seek playback position</string>
    <string name="description_rate_decrease">Decrease playback rate</string>
    <string name="description_rate_increase">Increase playback rate</string>
    <string name="action_menu_call_history_description">Call History</string>
    <string name="action_menu_overflow_description" msgid="2295659037509008453">More options</string>
    <string name="action_menu_dialpad_button">dial pad</string>
    <string name="menu_show_outgoing_only">Show outgoing only</string>
    <string name="menu_show_incoming_only">Show incoming only</string>
    <string name="menu_show_missed_only">Show missed only</string>
    <string name="menu_show_voicemails_only">Show voicemails only</string>
    <string name="menu_show_all_calls">Show all calls</string>
    <string name="menu_add_to_4g_conference_call">Add to 4G conference call</string>
    <string name="menu_4g_conference_call">4G conference call</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_wait">Add wait</string>
    <string name="dialer_settings_label">Settings</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_allContacts">All contacts</string>
    <string name="callDetailTitle">Call details</string>
    <string name="toast_call_detail_error">Details not available</string>
    <string name="dialer_useDtmfDialpad">Use touch tone keypad</string>
    <string name="dialer_returnToInCallScreen">Return to call in progress</string>
    <string name="dialer_addAnotherCall">Add call</string>
    <string name="type_incoming">Incoming call</string>
    <string name="type_outgoing">Outgoing call</string>
    <string name="type_missed">Missed call</string>
    <string name="type_incoming_video">Incoming video call</string>
    <string name="type_outgoing_video">Outgoing video call</string>
    <string name="type_missed_video">Missed video call</string>
    <string name="type_incoming_volte">Incoming 4G voice call</string>
    <string name="type_incoming_video_lte">Incoming 4G video call</string>
    <string name="type_outgoing_volte">Outgoing 4G voice call</string>
    <string name="type_outgoing_video_lte">Outgoing 4G video call</string>
    <string name="type_missed_volte">Missed 4G voice call</string>
    <string name="type_missed_video_lte">Missed 4G video call</string>
    <string name="type_incoming_vowifi">Incoming WiFi voice call</string>
     <string name="type_incoming_video_wifi">Incoming WiFi video call</string>
    <string name="type_outgoing_vowifi">Outgoing WiFi voice call</string>
     <string name="type_outgoing_video_wifi">Outgoing WiFi video call</string>
    <string name="type_missed_vowifi">Missed WiFi voice call</string>
     <string name="type_missed_video_wifi">Missed WiFi video call</string>
    <string name="type_voicemail">Voicemail</string>
    <string name="type_rejected">Declined call</string>
    <string name="type_blocked">Blocked call</string>
    <string name="actionIncomingCall">Incoming calls</string>
    <string name="description_call_log_play_button">Play voicemail</string>
    <string name="description_view_contact">View contact <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_call">Call <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_contact_details">Contact details for <xliff:g id="nameOrNumber">%1$s</xliff:g></string>
    <string name="description_num_calls"><xliff:g id="numberOfCalls">%1$s</xliff:g> calls.</string>
    <string name="description_video_call">Video call.</string>
    <string name="description_send_text_message">Send SMS to <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_call_log_unheard_voicemail">Unheard voicemail</string>
    <string name="description_start_voice_search">Start voice search</string>
    <string name="menu_callNumber">Call <xliff:g id="number">%s</xliff:g></string>
    <string name="unknown">Unknown</string>
    <string name="voicemail">Voicemail</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Payphone</string>
    <string name="callDetailsShortDurationFormat"><xliff:g id="seconds" example="28">%s</xliff:g> sec</string>
    <string name="callDetailsDurationFormat"><xliff:g id="minutes" example="42">%s</xliff:g> min <xliff:g id="seconds" example="28">%s</xliff:g> sec</string>
    <string name="voicemailCallLogToday">@string/call_log_header_today</string>
    <string name="voicemailCallLogDateTimeFormat"><xliff:g id="date" example="Jul 25, 2014">%1$s</xliff:g> at <xliff:g id="time" example="2:49 PM">%2$s</xliff:g></string>
    <string name="dialer_hint_find_contact">Search contacts</string>
    <string name="voicemail_play_faster">Play faster.</string>
    <string name="voicemail_play_slower">Play slower.</string>
    <string name="voicemail_play_start_pause">Start or pause playback.</string>
    <string name="blocked_numbers_disabled_emergency_header_label">
        Call blocking temporarily off
    </string>
    <string name="blocked_numbers_disabled_emergency_desc">
        Call blocking has been disabled because you contacted emergency services from this phone
        within the last 48 hours. It will be automatically reenabled once the 48 hour period
        expires.
    </string>
    <string name="blocked_call_settings_import_description">
        You previously marked some callers to be automatically sent to voicemail via other apps.
    </string>
    <string name="blocked_call_settings_view_numbers_button">View Numbers</string>
    <string name="blocked_call_settings_import_button">Import</string>
    <string name="addBlockedNumber">Add number</string>
    <string name="block_list">Blocked numbers</string>
    <string name="description_clear_search">Clear search</string>
    <string name="video_call_welcome_title"><b>Welcome to the new Video Calling Dialer</b></string>
    <string name="video_call_welcome_message">We all love to hear that familiar voice at the end of the line, but talking face-to-face is so much better! Here\'s what you should know to get your real-time (or FaceTime?) connections going: You\'ll need to be on 4G LTE or a Wi-Fi connection The device you\'re calling must also be video calling compatible Video calls use your high speed data You can also upgrade a voice call to a video call Check out <a>https://support.t-mobile.com/docs/DOC-23574</a> for more information.</string>
    <string name="video_call_welcome_message_repeat">Show this message every time</string>
</resources>