<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="false">

    <LinearLayout android:id="@+id/blocked_numbers_disabled_for_emergency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:focusable="true"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blocked_numbers_disabled_emergency_header_label"
            android:textStyle="bold"
            android:textColor="@color/blocked_number_disabled_emergency_header_color"
            style="@style/BlockedNumbersDescriptionTextStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blocked_numbers_disabled_emergency_desc"
            style="@style/BlockedNumbersDescriptionTextStyle" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:focusable="true">

            <TextView android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/block_list"
                android:textColor="@color/blocked_number_header_color"
                android:padding="@dimen/blocked_number_container_padding"
                style="@android:style/TextAppearance.Material.Subhead" />

            <RelativeLayout android:id="@+id/import_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView android:id="@+id/import_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blocked_call_settings_import_description"
                    android:textSize="@dimen/blocked_number_settings_description_text_size"
                    android:paddingStart="@dimen/blocked_number_container_padding"
                    android:paddingEnd="@dimen/blocked_number_container_padding"
                    style="@style/BlockedNumbersDescriptionTextStyle" />

                <Button android:id="@+id/import_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/import_description"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/blocked_number_container_padding"
                    android:text="@string/blocked_call_settings_import_button"
                    style="@style/DialerFlatButtonStyle" />

                <Button android:id="@+id/view_numbers_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/import_description"
                    android:layout_toLeftOf="@id/import_button"
                    android:text="@string/blocked_call_settings_view_numbers_button"
                    style="@style/DialerFlatButtonStyle" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/import_button"
                    android:background="@color/divider_line_color"
                    android:layout_marginTop="8dp" />

            </RelativeLayout>

            <LinearLayout
              android:id="@+id/add_number_linear_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingStart="@dimen/blocked_number_horizontal_margin"
              android:paddingTop="@dimen/blocked_number_top_margin"
              android:paddingBottom="@dimen/blocked_number_bottom_margin"
              android:baselineAligned="false"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:focusable="true"
              android:clickable="true"
              android:background="?android:attr/selectableItemBackground"
              android:contentDescription="@string/addBlockedNumber">

                <ImageView
                  android:id="@+id/add_number_icon"
                  android:layout_width="@dimen/contact_photo_size"
                  android:layout_height="@dimen/contact_photo_size"
                  android:importantForAccessibility="no" />
                <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:gravity="center_vertical"
                  android:layout_marginStart="@dimen/blocked_number_horizontal_margin">

                    <TextView android:id="@+id/add_number_textview"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/blocked_number_primary_text_color"
                      android:textSize="@dimen/blocked_number_primary_text_size"
                      android:includeFontPadding="false"
                      android:layout_marginBottom="5dp"
                      android:text="@string/addBlockedNumber" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/blocked_number_list_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="72dp"
                android:background="@color/divider_line_color" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
