<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_dialer_call_log_list_item">

    <RelativeLayout
        android:id="@+id/seek_container"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/call_detail_button_spacing">

        <SeekBar
            android:id="@+id/playback_seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/seekbar_drawable"
            android:thumb="@drawable/ic_voicemail_seek_handle"
            android:thumbOffset="8dp"
            android:progress="0"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:max="0"
            android:layout_centerVertical="true"
            android:contentDescription="@string/description_playback_seek" />

        <TextView
            android:id="@+id/playback_position_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

    <LinearLayout android:id="@+id/buttons_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton android:id="@+id/playback_start_stop"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginEnd="@dimen/call_detail_button_spacing"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_hold_pause"
            android:contentDescription="@string/voicemail_play_start_pause" />

        <ImageButton android:id="@+id/playback_speakerphone"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_speakerphone_on"
            android:contentDescription="@string/description_playback_speakerphone" />

        <ImageButton android:id="@+id/delete_voicemail"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_delete_24dp"
            android:tint="@color/voicemail_playback_icon_tint"
            android:contentDescription="@string/recentCalls_trashVoicemail" />

    </LinearLayout>

</LinearLayout>
